styles.css
* {
    margin: 0;
    padding: 0;
}

/* header */
.hero-container {
    width: 90%;
    max-width: 450px;
    padding: 16px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.hero-image-container {
    position: relative;
    width: 100%;
}

.hero-image-container h1 {
    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
    width: 100%;
    text-align: center;
}

.hero-text-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 15px;
    gap: 10px;
}

.hero-text-wrapper {
    text-align: center;
}

.hero-icon-container {
    display: flex;
    gap: 16px;
}

h1 {
    font-size: 3rem;
}

.office-worker {
    width: 100%;
    max-height: 500px;
    object-fit: cover;
    display: block;
    aspect-ratio: 2 / 3;
    object-position: center;
}

.icon {
    height: 25px;
    width: 25px;
    display: block;
}

.about-me {
    font-size: 2rem;
    margin-bottom: 5px;
}

@media (min-width: 500px) {
    .hero-container {
        display: block;
        box-sizing: border-box;
        width: 100%;
        max-width: 100%;
        overflow: auto;
        padding: 48px;
    }

    .hero-subcontainer > p {
        margin-top: 10px;
        box-sizing: border-box;
        max-width: 600px;
        line-height: 1.4;
        font-size: 1.2rem;
    }

     .about-me {
        overflow: hidden;
        text-align: center;
        padding-top: 75px;
    }

    h1 {
        position: absolute;
        left: 40%;
    }

    .office-worker {
        max-width: 45vw;
        aspect-ratio: 1 / 1;
        float: left;
        margin-right: 16px;
    }

    .hero-icon-container {
        justify-content: flex-end;
    }
}
/* main section */

.projects-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    row-gap: 45px;
    padding: 15px;
}

.project-card {
    border: 2px solid rgb(148, 3, 252);
}

.project-content {
    padding: 16px 24px;
    display: flex;
    flex-direction: column;
    gap: 12px;
}

.project-img {
    width: 100%;
    aspect-ratio: 16 / 9;
    height: auto;
    object-fit: cover;
    display: block;
    object-position: center top;
}

.shift-left {
    object-position: center left;
}

.shift-center {
    object-position: center;
}

.project-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.project-image-container {
    display: flex;
    gap: 10px;
    align-items: center;
}

h3 {
    text-align: center;
    margin-bottom: 16px;
    font-size: 2rem;
}

@media (min-width: 500px) {
    h3 {
        margin-left: 28px;
        margin-bottom: 5px;
        text-align: left;
    }
    .projects-grid {
        padding-top: 0px;
        padding-left: 28px;
        padding-right: 28px;
        padding-bottom: 84px;
    }

    .projects-grid {
        column-gap: 25px;
    }
}

/* footer */
.footer-container {
    border: 4px solid rgb(255, 183, 0);
    display: flex;
    flex-direction: column;
}

.footer-text-container {
    max-width: 340px;
    margin: 0 auto;
}

.footer-text-flex-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 20px;
    padding: 8px 20px 40px;
}

.hidden {
    display: none;
}

.footer-text-container h2 {
    text-align: center;
    font-size: 2rem;
}

.footer-phone-container {
    margin-bottom: 5px;
}

.footer-icon-container {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 30px
}

.footer-icon-container > .icon {
    height: 35px;
    width: 35px;
}

footer > .office-worker {
    width: 100%;
    display: block;
    object-fit: cover;
}

